--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,10 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "alireaza/laravel-form-data": "^1.3",
+        "alireaza/php-form-data": "^1.0",
         "guzzlehttp/guzzle": "^7.2",
+        "illuminatech/multipart-middleware": "^1.1",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8"
